# abracadabra

./: CNN_HW11.ipynb  HW1_numpy.ipynb  HW2.py  Keras_HW10.ipynb  abstract.py  asinc_sort.py  client.py  create_db.py  education.sql  factorize.py  factorize_pool.py  meta.py  server.py  sort.py
AIOHTTP/: app.py  pyproject.toml
AIOHTTP/src/: routes.py  urls.py  views.py
AIOHTTP/templates/: index.html
Api/: Pipfile  create_db.py  database.py  main.py  models.py  news.py  schemas.py
DataScience-hw2/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  python_data.csv
Flask/: Pipfile  app.py
Flask/config/: config.py
Flask/migrations/versions/: aa51f16acdba_.py
Flask/src/: __init__.py  models.py  routes.py
Flask/src/libs/: validation_file.py  validation_schemas.py
Flask/src/static/: style.css
Pyspark/: Pyspark.ipynb
PythonWebHW9/: main.py
PythonWebHW9/src/: seed.py
RedisHW/: contactbook.py  create.py  models.py  pyproject.toml  seed.py
RedisHW/redis/: redis_cache.py
SPy/: Hw5.1.ipynb  Hw5.2.ipynb
Scikit_Hw8/: OverfittingHomeWork.ipynb
TensorFlow/: tensorflow_mnist_hw.ipynb
alembic/: config.ini  pyproject.toml
alembic/migration/: env.py
alembic/src/: addressbook.py  db.py  models.py
hw3/: Dockerfile  LICENSE  Notes.py  README.md  base.py  birthlist.py  clean.py  main.py  phonebook.py
hw8/: education.db  education.sql  hw8.sql
hw9/: alembic.ini  main.py  models.py  seed.py
hw9/src/: db.py  models.py  seed.py
scrap/: pyproject.toml
scrap/hw14_spider/: scrapy.cfg
sklearn/: Hw7.1.ipynb  Hw7.2.ipynb  Hw7.3.ipynb
(+20 files in other folders)
