[tool.poetry]
name = "AIOHTTP"
version = "0.1.0"
description = ""
authors = ["Kozachenko Dmytro <abracadabra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
beautifulsoup4 = "^4.11.1"
aiohttp-jinja2 = "^1.5"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
