[tool.poetry]
name = "RedisHW"
version = "0.1.0"
description = ""
authors = ["Kozachenko Dmytro <abracadabra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
